--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dev_dependencies:
   flutter_native_splash: ^2.3.10
   flutter_datetime_picker_plus: ^2.0.1
   flutter_launcher_icons: ^0.13.1
+  google_fonts: ^6.2.1
+  path_provider: ^2.1.5 
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -87,6 +91,8 @@ flutter:
     - assets/images/C1.png
     - assets/images/C3.png
     - assets/images/YAIOSLIDER.gif
+    - assets/images/Wall.png
+    - assets/images/Wallpaper.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
